--------------------------
Darshan Release Change Log
--------------------------

darshan-1.1.6
=============
* Kevin Harms: bug fix for segfault in apps that use MPI_Init_thread()

darshan-1.1.5
=============
* Limit PMPI usage in library to fewer functions
* Update PMPI detection in compiler scripts to ignore functions unused by Darshan

darshan-1.1.4
=============
* Track files opened via Parallel NetCDF
* Track files opened via HDF5
* Record slowest individual POSIX read and write times along with access size for those operations
* Inspect symbols at compile time to determine whether to enable Darshan or not based on the presence of MPI and PMPI symbols
* Use GNU and IBM compilers from path rather than hard coded location
* Simplify warning message if unable to open log file
* Remove unused internal benchmark routines

darshan-1.1.3
=============
* Updated compiler scripts for V1R4 driver on BlueGene/P

darshan-1.1.2
=============
* Added *_r versions of each IBM compiler script on BlueGene/P

darshan-1.1.1
=============
* Set default permissions to 0400 (user read only) for output files
* Automatically disable Darshan at link time if common PMPI libraries are detected in the command line
* Experimental tool (darshan-gen-cc.pl) to automatically generate Darshan-enabled mpicc scripts

darshan-1.1.0
=============
* Initial public release